[package]
name = "arch-types"
version = "0.1.0"
authors = ["Caleb Zulawski <caleb.zulawski@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "CPU feature detection types"
repository = "https://github.com/calebzulawski/arch-types"
categories = ["hardware-support", "no-std"]
readme = "README.md"
edition = "2018"

[features]
default = ["std"]
std = []
nightly = []

[dependencies]
rustversion = "1"

[package.metadata.docs.rs]
all-features = true
targets = [
    "i686-unknown-linux-gnu",
    "x86_64-unknown-linux-gnu",
    "aarch64-unknown-linux-gnu",
    "arm-unknown-linux-gnueabihf",
    "mips-unknown-linux-gnu",
    "mips64-unknown-linux-gnuabi64",
    "powerpc-unknown-linux-gnu",
    "powerpc64-unknown-linux-gnu",
]
