[package]
name = "arch-types"
version = "0.1.0"
authors = ["Caleb Zulawski <caleb.zulawski@gmail.com>"]
edition = "2018"

[features]
default = ["std"]
std = []
nightly = []

[package.metadata.docs.rs]
all-features = true
targets = [
    "i686-unknown-linux-gnu",
    "x86_64-unknown-linux-gnu",
    "aarch64-unknown-linux-gnu",
    "arm-unknown-linux-gnueabihf",
    "mips-unknown-linux-gnu",
    "mips64-unknown-linux-gnuabi64",
    "powerpc-unknown-linux-gnu",
    "powerpc64-unknown-linux-gnu",
]
